--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>discord</title>
 </head>
-<body class="debu">
+<body class="debu  ">
     
     <header class="header">
         <div class="container nav">
             <div class="row">
-                <div>logo</div>
+                <div><img src="img/logo.svg" alt=""></div>
                 <ul class="main-menu space-between">
                     <li>Scarica</li>
                     <li>Perche Discord</li>
@@ -31,9 +31,10 @@
                 <div class="row flex-style1">
                     <h1 class="white-text">Il tuo posto per parlare</h1>
                     <p class="white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione blanditiis ducimus tempore numquam, ipsam repudiandae doloremque voluptates deserunt nulla unde molestiae minus aperiam aliquid eaque? Deserunt commodi perferendis dicta? Consequatur magnam vero ea possimus, quam odit maiores dolore eveniet consectetur delectus dolores nihil, pariatur perferendis debitis incidunt assumenda odio accusamus hic! Voluptatum culpa iusto hic rem, fuga labore ipsa ratione eum est aliquid, quis exercitationem optio, quas deserunt obcaecati!</p>
-                    
-                    <a class="button" href="#">Accedi</a>
-                    <a class="button" href="#">Accedi</a>
+                    <div class="item-button">
+                        <a class="button" href="#">Accedi</a>
+                        <a class="button" href="#">Accedi</a> 
+                    </div>
                 </div>
             </div>
         </section>
@@ -81,14 +82,14 @@
             </div>
         </section>
 
-        <section class="main_5-">
+        <section class="main_5-5">
             <div class="container">
                 <div class="row flex-style2">
                     <h1>Tecnologia affidabile per tenersi in contattto</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae aliquam enim dolorem commodi reiciendis voluptatem eligendi sit minus nam totam, aperiam, vel delectus dignissimos minima dicta. Facilis et maxime porro.</p>
                     <img src="./img/item4-big.svg" alt="just-chill">
                     <h2>Pronto per la tua avventura?</h2>
-                    <a class="button" href="#">Scarica per Mec</a>
+                    <div><a class="button" href="#">Scarica per Mec</a></div>
                 </div>
             </div>
         </section>  
@@ -156,7 +157,7 @@
         <section class="footer_2-2">
             <div class="container">
                 <div class="row space-between">
-                    <div>logo</div>
+                    <div><img src="./img/logo.svg" alt="logo"></div>
                     <a class="button" href="#">Registrati</a>
                 </div>
             </div>
