--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </section>
 
         <section class="main_4-5">
-            <div class="wave-flex wave-rotate"><img class="waves"  src="img/wave.svg" alt="wave"></div> 
+            <div class="wave-rotate"><img class="waves"  src="img/wave.svg" alt="wave"></div> 
             <div class="container">
                 <div class="row">
                     <div class="col-66">
